fix background clipping

--- a/css/main.less
+++ b/css/main.less
@@ -403,7 +403,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  height: 100%;
+  min-height: 100%;
 
   .project-columns {
     flex-direction: column;
